Se agrega código

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Prueba inicia</h1>
         <h2>Pronto nos vemos</h2>
+        <h3>seguimos haiendo cambios</h3>
     </body>
 </html>
