--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h1>Prueba inicia</h1>
         <h2>Pronto nos vemos</h2>
-        <h3>seguimos haiendo cambios</h3>
+        <h3>ya casi terminamos</h3>
     </body>
 </html>
